linux badge update

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                 </a>
                 <!-- Badge 8: cat linux.txt -->
                 <a href="https://tryhackme.com/547y4k1/badges/terminaled?utm_campaign=social_share&utm_medium=social&utm_content=badge&utm_source=copy" target="_blank" class="badge-card">
-                    <img src="https://tryhackme.com/img/badges/terminaled.svg" alt="cat linux.txt Badge">
+                    <img src="https://tryhackme.com/img/badges/linux.svg" alt="cat linux.txt Badge">
                     <div class="badge-label">cat linux.txt</div>
                 </a>
                 <!-- Badge 9: Webbed (Web Fundamentals) -->
