--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Satyaki Das | Cyber Security Analyst & Digital Forensics Specialist</title>
-    <meta name="description" content="Portfolio of Satyaki Das, a Cyber Security Analyst and Digital Forensics Specialist based in Kolkata. Expert in VAPT, Incident Response, and AI Security.">
+    <title>Satyaki Das | CEH v13 Ai & Digital Forensics Specialist</title>
+    <meta name="description" content="Portfolio of Satyaki Das, a Certified Ethical Hacker (CEH v13 Ai) and Digital Forensics Specialist based in Kolkata. Expert in VAPT, Incident Response, and AI Security.">
     <meta name="theme-color" content="#0a0a0a">
 
     <!-- Preload critical fonts -->
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     
-    <!-- Added FontAwesome for the icons in your new Project section -->
+    <!-- Added FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
@@ -192,8 +192,6 @@
             /* max-width removed to let grid handle it */
         }
 
-        /* Removed hero-tag styles as element is removed */
-
         .hero h1 span {
             display: block;
             background: linear-gradient(to right, #fff, #888);
@@ -289,7 +287,7 @@
             display: flex;
             gap: 4rem;
             width: max-content;
-            animation: marquee 20s linear infinite;
+            animation: marquee 25s linear infinite;
         }
 
         /* Pause on hover */
@@ -346,7 +344,7 @@
             display: flex;
             gap: 2rem;
             width: max-content;
-            animation: scroll-cert 30s linear infinite;
+            animation: scroll-cert 40s linear infinite;
             padding: 0 1rem;
         }
 
@@ -792,8 +790,7 @@
                         <span>Resilience.</span>
                     </h1>
                     <p>
-                        I am Satyaki Das. I bridge the gap between digital evidence and secure architecture. 
-                        Specializing in VAPT, Incident Response, and AI Governance.
+                        I am Satyaki Das. Certified Ethical Hacker (CEH v13 Ai) | Digital Forensics Specialist | Cybersecurity Analyst. I bridge the gap between digital evidence and secure architecture.
                     </p>
                     <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-bottom: 2rem; justify-content: center; @media(min-width: 900px){justify-content: flex-start;}">
                         <a href="#projects" class="btn magnetic">View Case Studies</a>
@@ -802,11 +799,11 @@
 
                     <div class="stats-grid">
                         <div class="stat-item">
-                            <h3>25+</h3>
+                            <h3>45+</h3>
                             <p>Forensic Investigations</p>
                         </div>
                         <div class="stat-item">
-                            <h3>500GB+</h3>
+                            <h3>800GB+</h3>
                             <p>Evidence Analyzed</p>
                         </div>
                         <div class="stat-item">
@@ -832,29 +829,35 @@
             <div class="ribbon-track">
                 <!-- Content Set 1 -->
                 <a href="#skills" class="ribbon-item">Kali Linux</a>
-                <a href="#skills" class="ribbon-item">Metasploit Framework</a>
+                <a href="#skills" class="ribbon-item">Metasploit</a>
                 <a href="#skills" class="ribbon-item">Burp Suite Pro</a>
                 <a href="#skills" class="ribbon-item">Wireshark</a>
                 <a href="#skills" class="ribbon-item">FTK Imager</a>
                 <a href="#skills" class="ribbon-item">X-Ways Forensics</a>
                 <a href="#skills" class="ribbon-item">Autopsy</a>
                 <a href="#skills" class="ribbon-item">Volatility</a>
-                <a href="#skills" class="ribbon-item">Python Scripting</a>
-                <a href="#skills" class="ribbon-item">ISO 27001:2022</a>
-                <a href="#skills" class="ribbon-item">OWASP Top 10</a>
+                <a href="#skills" class="ribbon-item">EnCase</a>
+                <a href="#skills" class="ribbon-item">Magnet AXIOM</a>
+                <a href="#skills" class="ribbon-item">Red Team</a>
+                <a href="#skills" class="ribbon-item">Blue Team</a>
+                <a href="#skills" class="ribbon-item">SOC Operations</a>
+                <a href="#skills" class="ribbon-item">ISO 27001</a>
                 
                 <!-- Content Set 2 (Duplicate for Seamless Loop) -->
                 <a href="#skills" class="ribbon-item">Kali Linux</a>
-                <a href="#skills" class="ribbon-item">Metasploit Framework</a>
+                <a href="#skills" class="ribbon-item">Metasploit</a>
                 <a href="#skills" class="ribbon-item">Burp Suite Pro</a>
                 <a href="#skills" class="ribbon-item">Wireshark</a>
                 <a href="#skills" class="ribbon-item">FTK Imager</a>
                 <a href="#skills" class="ribbon-item">X-Ways Forensics</a>
                 <a href="#skills" class="ribbon-item">Autopsy</a>
                 <a href="#skills" class="ribbon-item">Volatility</a>
-                <a href="#skills" class="ribbon-item">Python Scripting</a>
-                <a href="#skills" class="ribbon-item">ISO 27001:2022</a>
-                <a href="#skills" class="ribbon-item">OWASP Top 10</a>
+                <a href="#skills" class="ribbon-item">EnCase</a>
+                <a href="#skills" class="ribbon-item">Magnet AXIOM</a>
+                <a href="#skills" class="ribbon-item">Red Team</a>
+                <a href="#skills" class="ribbon-item">Blue Team</a>
+                <a href="#skills" class="ribbon-item">SOC Operations</a>
+                <a href="#skills" class="ribbon-item">ISO 27001</a>
             </div>
         </div>
 
@@ -866,12 +869,10 @@
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 4rem;">
                     <div>
                         <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
-                            Security isn't just about patching holes; it's about understanding the narrative behind the breach. 
-                            As a Digital Forensics Specialist, I treat every byte of data as a witness.
+                            Certified Ethical Hacker (CEH v13 AI) and Digital Forensics graduate with hands-on experience in VAPT, WAPT, incident response, and security compliance auditing.
                         </p>
                         <p style="color: var(--text-secondary);">
-                            Currently finishing my B.Sc. in Digital Forensics, I have hands-on experience in real-world litigation cases, 
-                            enterprise VAPT, and emerging threats in AI/LLM security. I don't just use tools; I interpret the results to provide actionable intelligence.
+                           Proven expertise in identifying critical vulnerabilities, conducting forensic examinations, and implementing ISO 27001 and NIST frameworks. Skilled in leveraging advanced forensic tools and penetration testing methodologies to strengthen security posture and support legal investigations.
                         </p>
                     </div>
                     <div>
@@ -901,6 +902,8 @@
                         <span class="skill-tag">Magnet AXIOM</span>
                         <span class="skill-tag">Volatility (Memory)</span>
                         <span class="skill-tag">Cellebrite UFED</span>
+                        <span class="skill-tag">Sleuth Kit</span>
+                        <span class="skill-tag">OSForensics</span>
                     </div>
                 </div>
 
@@ -911,9 +914,10 @@
                         <span class="skill-tag">Burp Suite Pro</span>
                         <span class="skill-tag">Metasploit</span>
                         <span class="skill-tag">Wireshark</span>
+                        <span class="skill-tag">Nessus</span>
                         <span class="skill-tag">Threat Hunting</span>
                         <span class="skill-tag">Malware Analysis</span>
-                        <span class="skill-tag">SIEM / SOAR</span>
+                        <span class="skill-tag">Red/Blue/Purple Team</span>
                     </div>
                 </div>
 
@@ -925,6 +929,7 @@
                         <span class="skill-tag">OWASP Top 10 LLM</span>
                         <span class="skill-tag">AI Risk Management</span>
                         <span class="skill-tag">Python Scripting</span>
+                        <span class="skill-tag">MITRE ATT&CK</span>
                     </div>
                 </div>
             </div>
@@ -1208,7 +1213,7 @@
                         <h3 class="timeline-role">Digital Forensic Evidence Examiner</h3>
                         <p class="timeline-company">Nightingale Data Solution | Kolkata</p>
                         <p class="timeline-desc">
-                            Executed high-stakes forensic examinations on 25+ devices. Extracted and analyzed 500GB+ of critical artifacts for defense litigation.
+                            Performed forensic analysis on 25+ devices using X-Ways, FTK Imager, and Autopsy; extracted 500+ GB of artifacts and prepared detailed reports for defense cases. Maintained strict chain of custody protocols for all evidence items.
                         </p>
                     </div>
                     <div class="timeline-item">
@@ -1216,15 +1221,15 @@
                         <h3 class="timeline-role">Digital Forensic Intern</h3>
                         <p class="timeline-company">ISOAH Forensics HQ</p>
                         <p class="timeline-desc">
-                            Recovered 300GB+ data from 150+ file systems. Maintained evidentiary integrity for 75+ items. specialized in damaged partition recovery.
+                             Conducted forensic analysis on 20+ devices using FTK Imager, X-Ways, and Autopsy; recovered 300+ GB of data from 150+ file systems and maintained chain of custody for 75+ evidence items.
                         </p>
                     </div>
                     <div class="timeline-item">
                         <span class="timeline-date">Aug 2024 - Sep 2024</span>
-                        <h3 class="timeline-role">InfoSec Compliance Auditor</h3>
+                        <h3 class="timeline-role">Information Security Compliance Auditor Intern (vCISO)</h3>
                         <p class="timeline-company">ISOAH (CERT-In Empaneled)</p>
                         <p class="timeline-desc">
-                            Spearheaded ISO 27001 audits on 100+ systems. Achieved 40% improvement in compliance posture.
+                            Audited 100+ systems and updated five security policies, improving compliance by 40%. Collaborated with teams to remediate control gaps and contributed to vCISO reporting.
                         </p>
                     </div>
                     <div class="timeline-item">
@@ -1232,7 +1237,7 @@
                         <h3 class="timeline-role">VAPT Intern</h3>
                         <p class="timeline-company">Navodita Infosystems | Remote</p>
                         <p class="timeline-desc">
-                            Orchestrated penetration testing on 15+ targets. Discovered 50+ vulnerabilities including 10 critical CVEs.
+                            Performed penetration testing on 15+ systems using Kali Linux, Metasploit, and Burp Suite. Discovered 50+ vulnerabilities including 10 critical CVEs, improved security by 30% through patch management.
                         </p>
                     </div>
                 </div>
